--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 
 <body>
-   <h1 class="main-header" id="">This is header.</h1>
-   <h2>This is subheader.</h2>
+   <h1 class="main-header">This is header.</h1>
+   <h2 class="sub-header">This is subheader.</h2>
 </body>
