--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,11 @@
 </head>
 
 <body>
-   <h1 class="main-header">This is header.</h1>
-   <h2 class="sub-header">This is subheader.</h2>
+    <div class="header-background">
+        <h1 class="main-header">CSS Blogpost
+        </h1>
+        <h2 class="sub-header">Catherine Thorne</h2>
+    </div> 
+
+
 </body>
